--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -13,7 +13,7 @@ align-items: center;
 }
 
 .footer {
-display: flex;
+display: block;
 flex: 1;
 padding: 2rem 0;
 border-top: 1px solid #eaeaea;
@@ -22,7 +22,7 @@ align-items: center;
 }
 
 .footer a {
-display: flex;
+display: inline;
 justify-content: center;
 align-items: center;
 flex-grow: 1;
